Show landing page as default entry

--- a/capsules.html
+++ b/capsules.html
@@ -37,7 +37,7 @@
         <h1>Focus Academy</h1>
       </div>
       <nav class="capsules-nav" aria-label="Navegació">
-        <a class="pill" href="index.html">← Torna a l'inici</a>
+        <a class="pill" href="app.html">← Torna a l'inici</a>
         <a class="pill" href="https://focuscat.onrender.com/" target="_blank" rel="noopener">Focus Exams</a>
       </nav>
     </div>
