--- a/play/index.html
+++ b/play/index.html
@@ -20,7 +20,7 @@
         <h1>FocusQuiz Live</h1>
       </div>
       <nav class="main-nav" aria-label="Navegació principal">
-        <a class="pill" href="../index.html">🏠 Inici</a>
+        <a class="pill" href="../app.html">🏠 Inici</a>
         <a class="pill" href="../capsules.html">🎓 Càpsules</a>
         <a class="pill" href="../portal/supabase-portal.html">Accés professorat</a>
       </nav>
@@ -108,7 +108,7 @@
   <section id="playError" class="wrap panel card play-error" hidden>
     <h2>Partida no disponible</h2>
     <p id="playErrorMessage">Comprova que el codi és correcte o que la partida continua oberta.</p>
-    <a class="pill" href="../index.html">← Torna a l'inici</a>
+    <a class="pill" href="../app.html">← Torna a l'inici</a>
   </section>
 
   <script type="module" src="../portal/supabase-config.js"></script>
