--- a/class.html
+++ b/class.html
@@ -14,7 +14,7 @@
         <h1>Aula FocusQuiz</h1>
       </div>
       <nav class="main-nav" aria-label="Navegació principal">
-        <a class="pill" href="index.html">🏠 Inici</a>
+        <a class="pill" href="app.html">🏠 Inici</a>
         <a class="pill" href="capsules.html">🎓 Càpsules</a>
         <a class="pill" href="portal/supabase-portal.html">Accés professorat</a>
       </nav>
@@ -55,7 +55,7 @@
   <section id="classError" class="wrap panel card class-error" hidden>
     <h2>Classe no trobada</h2>
     <p id="classErrorMessage">Comprova el codi i torna-ho a intentar.</p>
-    <a class="pill" href="index.html">← Torna a l'inici</a>
+    <a class="pill" href="app.html">← Torna a l'inici</a>
   </section>
 
   <template id="studentButtonTemplate">
