--- a/portal/supabase-portal.html
+++ b/portal/supabase-portal.html
@@ -15,7 +15,7 @@
         <h1>Focus Academy</h1>
       </div>
       <nav class="main-nav" aria-label="Navegació principal">
-        <a class="pill" href="../index.html">🏠 Inici</a>
+        <a class="pill" href="../app.html">🏠 Inici</a>
         <a class="pill" href="../capsules.html">🎓 Càpsules</a>
         <a class="pill" href="./supabase-portal.html" aria-current="page">Accés professorat</a>
       </nav>
