--- a/teoria.html
+++ b/teoria.html
@@ -137,7 +137,7 @@
         </div>
       </div>
       <nav>
-        <a class="pill" href="index.html" title="Torna a la pàgina principal">Inici</a>
+        <a class="pill" href="app.html" title="Torna a la pàgina principal">Inici</a>
         <button id="printBtn" class="pill" title="Imprimeix o desa en PDF">🖨️ Imprimeix</button>
         <input id="search" class="input" placeholder="Cerca ràpida…" />
       </nav>
