--- a/capsules.html
+++ b/capsules.html
@@ -72,7 +72,7 @@
         </a>
         <a class="capsule-card" href="capsula-accentuacio-basica.html">
           <span class="capsule-tag" style="background:rgba(124,58,237,0.12);color:#6d28d9">Llengua</span>
-          <h3 class="capsule-title"><span>´</span>Accent en català (nivell bàsic)</h3>
+          <h3 class="capsule-title"><span>`</span>Accent en català (nivell bàsic)</h3>
           <p class="capsule-copy">Aprèn quan cal accentuar paraules agudes, planes i esdrúixoles amb guies visuals, exemples i un qüestionari autocorrectiu.</p>
           <div class="capsule-meta">
             <span>Pensat per a aules de benvinguda</span>
