Update heading for live games feature

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </a>
         <a class="feature-card" href="app.html#livePlay">
           <div class="feature-icon">⚡</div>
-          <h3>Partides live</h3>
+          <h3>Partides live (només professorat)</h3>
           <p>Comparteix codis amb la classe i competeix en directe.</p>
           <span class="feature-link">Organitza una partida →</span>
         </a>
