--- a/app.html
+++ b/app.html
@@ -22,7 +22,7 @@
     <div class="login-divider" role="presentation"></div>
 
     <label class="login-label" for="newUserName">Crear nou usuari</label>
-    <p class="login-help">Posa-hi un nom senzill (per exemple «La classe de 4t» o el teu nom) per reconèixer on guardem els exàmens i notes.</p>
+    <p class="login-help">Posa-hi un nom senzill per reconèixer on guardem els exàmens i notes. Així pots guardar el teu progrés i veure el teu historial i les teves estadístiques</p>
     <input id="newUserName" class="login-input input" placeholder="Nom (mínim 2 caràcters)" />
     <div class="login-row">
       <button id="btnCreateUser" class="btn login-primary">Crea i entra</button>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="login-footer">
-      <small>💡 Només cal posar un nom per tenir guardats els exàmens i consultar els resultats quan tornis. Tot queda en localStorage, sense servidors.</small>
+      <small>💡 Només cal posar un nom per tenir guardats els exàmens i consultar els resultats quan tornis.</small>
     </div>
   </div>
 </div>
