Update landing layout and CTA

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
           <p>Recorda conceptes clau amb repetició espaiada.</p>
           <span class="feature-link">Anar a flashcards →</span>
         </a>
+        <a class="feature-card" href="teoria.html">
+          <div class="feature-icon">📖</div>
+          <h3>Teoria Focus</h3>
+          <p>Consulta la secció de teoria per repassar definicions i exemples.</p>
+          <span class="feature-link">Obrir teoria →</span>
+        </a>
         <a class="feature-card" href="capsules.html">
           <div class="feature-icon">📚</div>
           <h3>Càpsules guiades</h3>
@@ -96,8 +102,9 @@
     <section class="landing-cta">
       <h2>Preparat/ada per començar?</h2>
       <p>Entra a l'espai de pràctiques i activa la teva sessió FocusQuiz.</p>
-      <div class="hero-cta">
+      <div class="hero-cta hero-cta--bridge">
         <a class="cta-primary" href="app.html">Entrar a Focus Academy</a>
+        <span class="cta-middle">Per començar</span>
         <a class="cta-secondary" href="portal/supabase-portal.html">Accés professorat</a>
       </div>
     </section>
