Add landing feedback section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,38 @@
       </div>
     </section>
 
+    <section class="landing-feedback">
+      <header>
+        <p class="eyebrow">Feedback immediat</p>
+        <h2>Comprova al moment què passa a l'aula</h2>
+        <p>Les dades de cada partida alimenten estadístiques, gràfiques i tutories perquè puguis reaccionar sense esperar informes.</p>
+      </header>
+      <div class="landing-feedback-grid">
+        <article class="feedback-card feedback-card--highlight">
+          <div>
+            <div class="feature-icon">📈</div>
+            <h3>Estadístiques instantànies</h3>
+            <p>Resums automàtics de respostes encertades, temps i evolució per alumne. Ideal per detectar qui necessita reforç.</p>
+          </div>
+          <div class="feedback-graph" aria-hidden="true">
+            <div class="feedback-graph__bars"></div>
+          </div>
+        </article>
+        <article class="feedback-card">
+          <div class="feature-icon">📊</div>
+          <h3>Gràfiques comprensibles</h3>
+          <p>Visualitza progressos amb línies i anells senzills que es poden projectar a classe o compartir amb famílies.</p>
+          <span class="feature-link">Consulta exemples →</span>
+        </article>
+        <a class="feedback-card feedback-card--link" href="portal/supabase-portal.html">
+          <div class="feature-icon">🤖</div>
+          <h3>Tutor virtual</h3>
+          <p>Connecta't al portal docent o integra <code>tutor.js</code> per tenir recomanacions automatitzades per als teus grups.</p>
+          <span class="feature-link">Entrar al portal docent →</span>
+        </a>
+      </div>
+    </section>
+
     <section class="landing-cta">
       <h2>Preparat/ada per començar?</h2>
       <p>Entra a l'espai de pràctiques i activa la teva sessió FocusQuiz.</p>
