--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
           <p>Recorda conceptes clau amb repetició espaiada.</p>
           <span class="feature-link">Anar a flashcards →</span>
         </a>
+        <a class="feature-card" href="teoria.html">
+          <div class="feature-icon">📖</div>
+          <h3>Teoria Focus</h3>
+          <p>Consulta la secció de teoria per repassar definicions i exemples.</p>
+          <span class="feature-link">Obrir teoria →</span>
+        </a>
         <a class="feature-card" href="capsules.html">
           <div class="feature-icon">📚</div>
           <h3>Càpsules guiades</h3>
@@ -93,11 +99,44 @@
       </div>
     </section>
 
+    <section class="landing-feedback">
+      <header>
+        <p class="eyebrow">Comprova al moment què passa a l'aula</p>
+        <h2>Feedback accionable mentre tothom treballa</h2>
+        <p>Els indicadors en directe, les alertes intel·ligents i els informes finals et permeten actuar sense esperar a acabar la sessió.</p>
+      </header>
+      <div class="feedback-grid">
+        <article class="feedback-card feedback-card--highlight">
+          <div>
+            <h3>Quadre d'indicadors en directe</h3>
+            <p>Visualitza quants alumnes han completat l'activitat, els encerts i el temps mitjà. Tot s'actualitza mentre treballen.</p>
+          </div>
+          <div class="feedback-graph" aria-hidden="true">
+            <div class="feedback-graph__bar" style="--value:0.78"></div>
+            <div class="feedback-graph__bar" style="--value:0.62"></div>
+            <div class="feedback-graph__bar" style="--value:0.92"></div>
+            <div class="feedback-graph__bar" style="--value:0.48"></div>
+          </div>
+        </article>
+        <article class="feedback-card">
+          <h3>Alertes d'atenció immediates</h3>
+          <p>Rep avisos quan algú queda encallat o s'allunya del ritme. El tutor virtual ressalta els alumnes que necessiten suport per intervenir-hi al moment.</p>
+          <span class="feedback-pill">Tutor virtual actiu</span>
+        </article>
+        <article class="feedback-card">
+          <h3>Resum de feedback personalitzat</h3>
+          <p>En finalitzar l'activitat obtens punts forts, errors freqüents i suggeriments de teoria o flashcards per continuar treballant.</p>
+          <a class="feature-link" href="teoria.html">Obrir recomanacions de teoria →</a>
+        </article>
+      </div>
+    </section>
+
     <section class="landing-cta">
       <h2>Preparat/ada per començar?</h2>
       <p>Entra a l'espai de pràctiques i activa la teva sessió FocusQuiz.</p>
-      <div class="hero-cta">
+      <div class="hero-cta hero-cta--bridge">
         <a class="cta-primary" href="app.html">Entrar a Focus Academy</a>
+        <span class="cta-middle">Per començar</span>
         <a class="cta-secondary" href="portal/supabase-portal.html">Accés professorat</a>
       </div>
     </section>
