--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
           <p>Recorda conceptes clau amb repetició espaiada.</p>
           <span class="feature-link">Anar a flashcards →</span>
         </a>
+        <a class="feature-card" href="teoria.html">
+          <div class="feature-icon">📖</div>
+          <h3>Teoria Focus</h3>
+          <p>Consulta la secció de teoria per repassar definicions i exemples.</p>
+          <span class="feature-link">Obrir teoria →</span>
+        </a>
         <a class="feature-card" href="capsules.html">
           <div class="feature-icon">📚</div>
           <h3>Càpsules guiades</h3>
@@ -93,11 +99,40 @@
       </div>
     </section>
 
+    <section class="landing-feedback">
+      <header>
+        <p class="eyebrow">Feedback immediat</p>
+        <h2>Comprova al moment què passa a l'aula</h2>
+        <p>Les dades de cada partida alimenten estadístiques, gràfiques i tutories perquè puguis reaccionar sense esperar informes.</p>
+      </header>
+      <div class="feedback-grid">
+        <article class="feedback-card">
+          <div class="feedback-icon">📊</div>
+          <h3>Indicadors en directe</h3>
+          <p>Acabats, encerts i temps es refresquen a l’instant perquè segueixis el ritme.</p>
+          <span class="feature-link">Obrir panell docent →</span>
+        </article>
+        <article class="feedback-card">
+          <div class="feedback-icon">⚠️</div>
+          <h3>Alertes immediates</h3>
+          <p>El tutor virtual destaca qui s’encalla o surt del flux per donar-hi suport.</p>
+          <span class="feature-link">Veure tutor virtual →</span>
+        </article>
+        <article class="feedback-card">
+          <div class="feedback-icon">✅</div>
+          <h3>Resum final</h3>
+          <p>Rep punts forts i reptes següents amb enllaços a teoria i flashcards.</p>
+          <a class="feature-link" href="teoria.html">Repassar recomanacions →</a>
+        </article>
+      </div>
+    </section>
+
     <section class="landing-cta">
       <h2>Preparat/ada per començar?</h2>
       <p>Entra a l'espai de pràctiques i activa la teva sessió FocusQuiz.</p>
-      <div class="hero-cta">
+      <div class="hero-cta hero-cta--bridge">
         <a class="cta-primary" href="app.html">Entrar a Focus Academy</a>
+        <span class="cta-middle">Per començar</span>
         <a class="cta-secondary" href="portal/supabase-portal.html">Accés professorat</a>
       </div>
     </section>
