Add Spanish language practice modules

--- a/app.html
+++ b/app.html
@@ -359,6 +359,7 @@
 
   <!-- 🔹 Carrega primer els mòduls auxiliars -->
   <script src="lang-cat.js" defer></script>
+  <script src="lang-esp.js" defer></script>
   <script src="quim.js" defer></script>
   <script src="geo.js" defer></script>
   <script src="tutor.js"></script>
