Add Industrial Revolution history flashcards

--- a/flashcards.html
+++ b/flashcards.html
@@ -915,6 +915,99 @@
   <script>
     const topics = [
       {
+        id: 'revolucio-industrial',
+        title: '⚙️ Revolució Industrial (ESO)',
+        subject: 'history',
+        summary:
+          'Descobreix com el pas del treball manual a les màquines va transformar l’economia, la societat i les ciutats.',
+        cards: [
+          {
+            question: 'Què és la Revolució Industrial?',
+            answer:
+              'Un procés de transformacions econòmiques, socials i tecnològiques que va passar del treball manual al treball amb màquines.',
+          },
+          {
+            question: 'On va començar?',
+            answer: 'A la Gran Bretanya, a mitjan segle XVIII.',
+          },
+          {
+            question: 'Quina indústria va ser la primera a mecanitzar-se?',
+            answer: 'La tèxtil (cotó).',
+          },
+          {
+            question: 'Quina invenció va impulsar les màquines?',
+            answer: 'La màquina de vapor, creada per James Watt.',
+          },
+          {
+            question: 'Quines noves fonts d’energia es van utilitzar?',
+            answer: 'El carbó i el vapor.',
+          },
+          {
+            question: 'Què és la mecanització?',
+            answer: 'Substitució del treball manual per màquines.',
+          },
+          {
+            question: 'Què és el sistema fabril?',
+            answer: 'Treballadors i màquines concentrats en fàbriques, no a casa.',
+          },
+          {
+            question: 'Com va canviar la població?',
+            answer: 'Va augmentar molt per la millora de l’alimentació i de la medicina.',
+          },
+          {
+            question: 'Què és l’èxode rural?',
+            answer: 'Quan moltes persones deixen el camp per anar a treballar a la ciutat.',
+          },
+          {
+            question: 'Quines noves classes socials apareixen?',
+            answer: 'La burgesia industrial i el proletariat (obrers).',
+          },
+          {
+            question: 'Quines eren les condicions dels obrers?',
+            answer: 'Llargs horaris, salaris baixos i condicions perilloses.',
+          },
+          {
+            question: 'Què és el liberalisme econòmic?',
+            answer: 'Doctrina que defensa la llibertat econòmica i el lliure mercat (Adam Smith).',
+          },
+          {
+            question: 'Què van ser els luddites?',
+            answer: 'Grups d’obrers que destruïen màquines perquè pensaven que els treien la feina.',
+          },
+          {
+            question: 'Què és un sindicat?',
+            answer: 'Associació de treballadors per defensar els seus drets.',
+          },
+          {
+            question: 'Què és la segona Revolució Industrial?',
+            answer: 'Etapa (finals del segle XIX) marcada per l’ús del petroli, electricitat i acer.',
+          },
+          {
+            question: 'Quines noves invencions hi va haver a la 2a fase?',
+            answer: 'El telèfon, el motor d’explosió, la bombeta, el ferrocarril elèctric.',
+          },
+          {
+            question: 'Què és el ferrocarril i per què va ser important?',
+            answer:
+              'Un nou sistema de transport ràpid que va facilitar el comerç i la mobilitat.',
+          },
+          {
+            question: 'Què és el capitalisme industrial?',
+            answer:
+              'Sistema basat en la propietat privada i la inversió de capital per obtenir beneficis.',
+          },
+          {
+            question: 'Com van canviar les ciutats?',
+            answer: 'Van créixer ràpidament i van aparèixer barris obrers amb males condicions.',
+          },
+          {
+            question: 'Quins impactes va tenir la Revolució Industrial?',
+            answer:
+              'Desenvolupament econòmic, avenços tecnològics, però també contaminació i desigualtats socials.',
+          },
+        ],
+      },
+      {
         id: 'borbonic-reforms',
         title: '🏰 Antic Règim i reformes borbòniques (s. XVIII)',
         subject: 'history',
