Update title of industrial revolution topic

--- a/flashcards.html
+++ b/flashcards.html
@@ -916,7 +916,7 @@
     const topics = [
       {
         id: 'revolucio-industrial',
-        title: '⚙️ Revolució Industrial (ESO)',
+        title: '⚙️ Revolució Industrial',
         subject: 'history',
         summary:
           'Descobreix com el pas del treball manual a les màquines va transformar l’economia, la societat i les ciutats.',
