--- a/app.html
+++ b/app.html
@@ -122,12 +122,12 @@
           <div class="study-calendar__layout">
             <div class="study-calendar__board">
               <div class="study-calendar__month">
-                <button class="btn-ghost" type="button" aria-label="Mes anterior">←</button>
+                <button class="btn-ghost" id="studyCalendarPrev" type="button" aria-label="Mes anterior">←</button>
                 <div class="study-calendar__month-title">
                   <span data-calendar-month>Setembre 2024</span>
                   <strong>Vista mensual</strong>
                 </div>
-                <button class="btn-ghost" type="button" aria-label="Mes següent">→</button>
+                <button class="btn-ghost" id="studyCalendarNext" type="button" aria-label="Mes següent">→</button>
               </div>
 
               <div class="study-calendar__legend">
@@ -146,47 +146,7 @@
                 <span>Dg</span>
               </div>
 
-              <div class="study-calendar__grid">
-                <button class="study-calendar__cell is-outside" type="button" data-date="2024-08-26"><span class="study-calendar__date">26</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell is-outside" type="button" data-date="2024-08-27"><span class="study-calendar__date">27</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell is-outside" type="button" data-date="2024-08-28"><span class="study-calendar__date">28</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell is-outside" type="button" data-date="2024-08-29"><span class="study-calendar__date">29</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell is-outside" type="button" data-date="2024-08-30"><span class="study-calendar__date">30</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-01" data-in-month="true"><span class="study-calendar__date">1</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-02" data-in-month="true"><span class="study-calendar__date">2</span><span class="study-calendar__events"></span></button>
-
-                <button class="study-calendar__cell" type="button" data-date="2024-09-03" data-in-month="true"><span class="study-calendar__date">3</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-04" data-in-month="true"><span class="study-calendar__date">4</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-05" data-in-month="true"><span class="study-calendar__date">5</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-06" data-in-month="true"><span class="study-calendar__date">6</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-07" data-in-month="true"><span class="study-calendar__date">7</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-08" data-in-month="true"><span class="study-calendar__date">8</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-09" data-in-month="true"><span class="study-calendar__date">9</span><span class="study-calendar__events"></span></button>
-
-                <button class="study-calendar__cell" type="button" data-date="2024-09-10" data-in-month="true"><span class="study-calendar__date">10</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-11" data-in-month="true"><span class="study-calendar__date">11</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-12" data-in-month="true"><span class="study-calendar__date">12</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-13" data-in-month="true"><span class="study-calendar__date">13</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-14" data-in-month="true"><span class="study-calendar__date">14</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-15" data-in-month="true"><span class="study-calendar__date">15</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-16" data-in-month="true"><span class="study-calendar__date">16</span><span class="study-calendar__events"></span></button>
-
-                <button class="study-calendar__cell" type="button" data-date="2024-09-17" data-in-month="true"><span class="study-calendar__date">17</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-18" data-in-month="true"><span class="study-calendar__date">18</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-19" data-in-month="true"><span class="study-calendar__date">19</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-20" data-in-month="true"><span class="study-calendar__date">20</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-21" data-in-month="true"><span class="study-calendar__date">21</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-22" data-in-month="true"><span class="study-calendar__date">22</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-23" data-in-month="true"><span class="study-calendar__date">23</span><span class="study-calendar__events"></span></button>
-
-                <button class="study-calendar__cell" type="button" data-date="2024-09-24" data-in-month="true"><span class="study-calendar__date">24</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-25" data-in-month="true"><span class="study-calendar__date">25</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-26" data-in-month="true"><span class="study-calendar__date">26</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-27" data-in-month="true"><span class="study-calendar__date">27</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-28" data-in-month="true"><span class="study-calendar__date">28</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-29" data-in-month="true"><span class="study-calendar__date">29</span><span class="study-calendar__events"></span></button>
-                <button class="study-calendar__cell" type="button" data-date="2024-09-30" data-in-month="true"><span class="study-calendar__date">30</span><span class="study-calendar__events"></span></button>
-              </div>
+              <div id="studyCalendarGrid" class="study-calendar__grid"></div>
             </div>
 
             <aside class="study-calendar__details">
@@ -320,6 +280,10 @@
               const storageKey = 'focusquiz.studyCalendar';
               const addShortcut = document.getElementById('studyCalendarAddShortcut');
               const todayButton = document.getElementById('studyCalendarToday');
+              const prevButton = document.getElementById('studyCalendarPrev');
+              const nextButton = document.getElementById('studyCalendarNext');
+              const monthLabel = calendarSection.querySelector('[data-calendar-month]');
+              const grid = document.getElementById('studyCalendarGrid');
               const titleInput = document.getElementById('studyCalendarTitleInput');
               const typeInput = document.getElementById('studyCalendarTypeInput');
               const descInput = document.getElementById('studyCalendarDescriptionInput');
@@ -329,10 +293,12 @@
               const selectedBadge = document.getElementById('studyCalendarSelectedBadge');
               const list = document.getElementById('studyCalendarList');
               const emptyState = document.getElementById('studyCalendarEmpty');
-              const cells = Array.from(calendarSection.querySelectorAll('.study-calendar__cell[data-date]'));
+              let cells = [];
               let selectedDate = null;
               let eventsByDate = {};
               let editingIndex = null;
+              let currentMonth = new Date();
+              currentMonth.setDate(1);
 
               try {
                 eventsByDate = JSON.parse(localStorage.getItem(storageKey)) || {};
@@ -352,6 +318,8 @@
                 return parsed.toLocaleDateString('ca-ES', { weekday: 'short', day: 'numeric', month: 'long' });
               };
 
+              const formatISO = (date) => date.toISOString().slice(0, 10);
+
               const setSelectedDate = (value) => {
                 selectedDate = value;
                 cells.forEach(cell => cell.classList.toggle('is-selected', cell.dataset.date === value));
@@ -360,12 +328,62 @@
                 renderDetails();
               };
 
+              const ensureSelectedDate = () => {
+                if (!cells.length) return;
+                const todayIso = formatISO(new Date());
+                const todayCell = cells.find(cell => cell.dataset.date === todayIso);
+                const monthCell = cells.find(cell => cell.dataset.inMonth === 'true');
+                const hasSelected = cells.some(cell => cell.dataset.date === selectedDate);
+                if (hasSelected && selectedDate) {
+                  setSelectedDate(selectedDate);
+                  return;
+                }
+                const fallback = todayCell || monthCell || cells[0];
+                if (fallback) setSelectedDate(fallback.dataset.date);
+              };
+
               const persist = () => {
                 localStorage.setItem(storageKey, JSON.stringify(eventsByDate));
               };
 
+              const renderMonthGrid = () => {
+                if (!grid) return;
+                if (monthLabel) {
+                  monthLabel.textContent = currentMonth.toLocaleDateString('ca-ES', { month: 'long', year: 'numeric' });
+                }
+
+                grid.innerHTML = '';
+                cells = [];
+
+                const startOfMonth = new Date(currentMonth);
+                startOfMonth.setDate(1);
+                const startOffset = (startOfMonth.getDay() + 6) % 7;
+                const totalCells = 42;
+
+                for (let index = 0; index < totalCells; index++) {
+                  const dayNumber = index - startOffset + 1;
+                  const cellDate = new Date(currentMonth.getFullYear(), currentMonth.getMonth(), dayNumber);
+                  const isCurrentMonth = cellDate.getMonth() === currentMonth.getMonth();
+                  const button = document.createElement('button');
+                  button.className = 'study-calendar__cell';
+                  if (!isCurrentMonth) button.classList.add('is-outside');
+                  if (isCurrentMonth) button.dataset.inMonth = 'true';
+                  button.dataset.date = formatISO(cellDate);
+                  button.innerHTML = `
+                    <span class="study-calendar__date">${cellDate.getDate()}</span>
+                    <span class="study-calendar__events"></span>
+                  `;
+                  button.addEventListener('click', () => setSelectedDate(button.dataset.date));
+                  grid.appendChild(button);
+                  cells.push(button);
+                }
+
+                ensureSelectedDate();
+                renderCells();
+              };
+
               const renderCells = () => {
-                const today = new Date().toISOString().slice(0, 10);
+                const today = formatISO(new Date());
                 cells.forEach(cell => {
                   const date = cell.dataset.date;
                   const container = cell.querySelector('.study-calendar__events');
@@ -455,11 +473,17 @@
                 addButton.textContent = 'Afegir';
               };
 
-              cells.forEach(cell => {
-                cell.addEventListener('click', () => {
-                  setSelectedDate(cell.dataset.date);
-                });
-              });
+              const goToToday = () => {
+                const today = new Date();
+                const formatted = formatISO(today);
+                currentMonth = new Date(today.getFullYear(), today.getMonth(), 1);
+                renderMonthGrid();
+                const todayCell = cells.find(cell => cell.dataset.date === formatted);
+                if (todayCell) {
+                  setSelectedDate(formatted);
+                  todayCell.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }
+              };
 
               list.addEventListener('click', (event) => {
                 const target = event.target;
@@ -492,19 +516,19 @@
               addButton.addEventListener('click', addEvent);
               addShortcut.addEventListener('click', addEvent);
               clearButton.addEventListener('click', clearForm);
-              todayButton.addEventListener('click', () => {
-                const today = new Date();
-                const formatted = today.toISOString().slice(0, 10);
-                const todayCell = cells.find(cell => cell.dataset.date === formatted);
-                if (todayCell) {
-                  setSelectedDate(formatted);
-                  todayCell.scrollIntoView({ behavior: 'smooth', block: 'center' });
-                }
+              todayButton.addEventListener('click', goToToday);
+
+              prevButton?.addEventListener('click', () => {
+                currentMonth.setMonth(currentMonth.getMonth() - 1);
+                renderMonthGrid();
               });
 
-              const defaultCell = cells.find(cell => cell.dataset.inMonth === 'true') || cells[0];
-              if (defaultCell) setSelectedDate(defaultCell.dataset.date);
-              renderCells();
+              nextButton?.addEventListener('click', () => {
+                currentMonth.setMonth(currentMonth.getMonth() + 1);
+                renderMonthGrid();
+              });
+
+              renderMonthGrid();
             }
           });
         </script>
